--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,30 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #2e2f42;
 padding: 24px 0;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+position: relative;
+overflow: hidden;
+}
+
+
+
+
+  .nav-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+.nav-link:hover::after, 
+.nav-link:focus::after {
+    transform: translateY(0);  
 }
 
 .contacts {
@@ -108,9 +132,20 @@ color: #404bbf;
 }
 
 .hero {
-background: #2e2f42;
+margin: 0 auto;
+background-color: #2e2f42;
+background-repeat: no-repeat;
+background-size: cover;
+background-position: 50% 50%;
+background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+url(../images/people-office.jpg);
 padding: 188px 0;
-text-align: center;
+width: 100%;
+max-width: 1440px;
+}
+
+.container-hero {
+   
 }
 
 .hero-title {
@@ -182,6 +217,20 @@ letter-spacing: 0.02em;
 width: calc((100%-72) / 4);
 }
 
+.skilss-item-background {
+border: 1px solid #8e8f99;
+border-radius: 4px;
+width: 264px;
+height: 112px;
+background: #f4f4fd;   
+}
+
+.skilss-item-icons {
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
 .skills-title {
 font-weight: 500;
 font-size: 20px;
@@ -199,29 +248,22 @@ line-height: 1.5;
 .team {
 background: #f4f4fd;
 text-align: center;
-padding: 120px 0;
-}
-
-.team-title {
-padding-top: 120px;
-margin-bottom: 72px; 
 }
 
 .team-image {
 margin-bottom: 32px;
 }
 
-.team-walker {
-padding: 32px 0 
-}
-
 .team-list {
 display: flex;
 justify-content: space-between;
+align-items: center;
 gap: 24px;
 }
 
 .team-title {
+padding-top: 120px;
+margin-bottom: 72px; 
 font-weight: 700;
 font-size: 36px;
 line-height: 1.11;
@@ -229,7 +271,10 @@ letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
 text-transform: capitalize;
-padding-bottom: 32px;
+}
+
+.team-walker {
+    margin-bottom: 8px;
 }
 
 .team-item {
@@ -238,6 +283,8 @@ margin-bottom: 120px;
 text-align: center;
 padding-bottom:  32px;
 border-radius: 0px 0px 4px 4px;
+box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+background: #fff;
 }
 
 .team-table-title {
@@ -255,6 +302,37 @@ font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+}
+
+.team-icons-link {
+justify-content: center;
+width: 40px;;
+height: 40px;
+border-radius: 50%;
+background-color: #404bbf;
+line-height: 0;
+display: flex;
+align-items: center;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-icons-link:hover,
+.team-icons-link:focus {
+    background-color: #31d0aa;  
+}
+
+.team-container-icons {
+display: flex;
+gap: 24px;
+align-items: center;
+justify-content: center;
+}
+
+.team-icons{
+   
+    width: 24px;;
+    height: 24px;
+fill: #4d5ae5;
 }
 
 .portfolio {
@@ -289,14 +367,47 @@ gap: 48px 24px;
 }
 
 .portfolio-item {
+ 
 display: flex;
 flex-direction: column;
 flex-basis: 360px;
 width: calc((100% – 48px)/3);
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-.portfolio-image {
-margin-bottom: 32px;}
+.portfolio-item:hover,
+.portfolio-item:focus {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    background: #fff;
+ 
+ }
+
+.image-info {
+    position: relative;
+    overflow: hidden;
+}
+
+ .portfolio-item-info {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0; 
+    background: #4d5ae5;
+    transform: translateY(100%);
+   overflow: auto;
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .image-info-text {
+    padding: 40px 32px;
+    color: #f4f4fd;
+ }
+
+ .portfolio-item:hover .portfolio-item-info,
+ .portfolio-item:focus .portfolio-item-info {
+    transform: translateY(0);
+ }
 
 .portfolio-walker {
 border-right: 1px solid #e7e9fc; 
@@ -305,7 +416,6 @@ border-bottom: 1px solid #e7e9fc;
 padding: 32px 16px;
 }
 
-}
 .portfolio-title {
 font-weight: 700;
 font-size: 36px;
@@ -330,11 +440,20 @@ letter-spacing: 0.02em;
 .footer {
 background: #2e2f42;
 padding: 100px 0;
-display: block;
+display: flex;
+justify-content:space-between;
+align-items: flex-start;
+
+}
+
+.container-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .footer-logo {
-display: block;
+
 margin-bottom: 16px;
 }
 
@@ -352,4 +471,26 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #f4f4fd;
 max-width: 264px;
+}
+
+.footer-socialmedia {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 120px;
+}
+
+.footer-socialmedia-text {
+    margin-bottom: 16px;
+    color: #fff;
+}
+
+.footer-socialmedia-icons {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-icons {
+    width: 40px;
+    height: 40px;
 }
