--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ align-items: center;
 
 .page-header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1 , 0.08);
 }
 
 .header-nav {
@@ -58,6 +59,7 @@ color: #4d5ae5;
 .header-logo {
 padding: 24px 0;
 margin-right: 76px;
+
 }
 
 .header-logo .logo-part {
@@ -121,7 +123,7 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
 padding: 24px 0;
-
+transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-link:hover,
@@ -176,7 +178,9 @@ border-radius: 4px;
 border: none;
 padding: 16px 32px;
 height: 56px;
-min-width: 169px
+min-width: 169px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+
 }
 
 .hero-button:hover,
@@ -191,6 +195,7 @@ padding: 120px 0
 .conteiner-skills {
 display: flex;
 align-items: center;
+margin-bottom: 8px;
 }
 
 .skills-title-main {
@@ -229,6 +234,8 @@ background: #f4f4fd;
 display: flex;
 align-items: center;
 justify-content: center;
+width: 64px;
+height: 64px;
 }
 
 .skills-title {
@@ -249,6 +256,10 @@ line-height: 1.5;
 background: #f4f4fd;
 text-align: center;
 }
+
+.container-team {
+padding: 32px 0;
+} 
 
 .team-image {
 margin-bottom: 32px;
@@ -302,6 +313,12 @@ font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+}
+
+.team-table-icons {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
 }
 
 .team-icons-link {
@@ -367,12 +384,13 @@ gap: 48px 24px;
 }
 
 .portfolio-item {
- 
 display: flex;
 flex-direction: column;
 flex-basis: 360px;
 width: calc((100% – 48px)/3);
-transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
 }
 
 .portfolio-item:hover,
@@ -442,18 +460,17 @@ background: #2e2f42;
 padding: 100px 0;
 display: flex;
 justify-content:space-between;
-align-items: flex-start;
-
+align-items: baseline;
+margin-right: 120px;
 }
 
 .container-footer {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    
 }
 
 .footer-logo {
-
 margin-bottom: 16px;
 }
 
@@ -483,11 +500,23 @@ max-width: 264px;
 .footer-socialmedia-text {
     margin-bottom: 16px;
     color: #fff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px; 
+
 }
 
-.footer-socialmedia-icons {
+.footer-table{
     display: flex;
     gap: 16px;
+}
+
+
+.footer-socialmedia-icons {
+  
 }
 
 .footer-icons {
