--- a/css/styles.css
+++ b/css/styles.css
@@ -195,7 +195,7 @@ padding: 120px 0
 .conteiner-skills {
 display: flex;
 align-items: center;
-margin-bottom: 8px;
+
 height: 112px;
 }
 
@@ -210,6 +210,7 @@ overflow: hidden;
 border: 0;
 white-space: nowrap;
 clip-path: inset(100%);
+margin-bottom: 8px;
 }
 
 .skills-list {
@@ -407,24 +408,28 @@ background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     overflow: hidden;
 }
 
- .portfolio-item-info {
+ 
+   
+ .image-info-text {
+    padding: 40px 32px;
+    color: #f4f4fd;
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
-    left: 0; 
+    
     background: #4d5ae5;
     transform: translateY(100%);
    overflow: auto;
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em; 
+}
 
- .image-info-text {
-    padding: 40px 32px;
-    color: #f4f4fd;
- }
 
- .portfolio-item:hover .portfolio-item-info,
+
+ .portfolio-item:hover .portfolio-info-text,
  .portfolio-item:focus .portfolio-item-info {
     transform: translateY(0);
  }
