--- a/css/styles.css
+++ b/css/styles.css
@@ -391,8 +391,8 @@ display: flex;
 flex-direction: column;
 flex-basis: 360px;
 width: calc((100% – 48px)/3);
-transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
 }
 
@@ -429,9 +429,8 @@ letter-spacing: 0.02em;
 
 
 
- .portfolio-item:hover .portfolio-info-text,
- .portfolio-item:focus .portfolio-item-info {
-    transform: translateY(0);
+.image-info:hover .image-info-text {
+ transform: translateY(0);
  }
 
 .portfolio-walker {
