--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,9 @@ font-size: 16px;
 line-height: 1.5;
 }
 
+
+
+
 .team {
 background: #f4f4fd;
 text-align: center;
@@ -294,7 +297,7 @@ gap: 24px;
    
 }   
 .team-walker {
-    margin-bottom: 8px;
+   
 }
 
 .team-image {
@@ -324,12 +327,17 @@ letter-spacing: 0.02em;
     gap: 24px;
 }
 
+.team-li-icons {
+    width: 40px;
+    height: 40px;
+}
+
 .team-icons-link {
 justify-content: center;
-width: 40px;;
-height: 40px;
+width: 100%;
+height: 100%;
 border-radius: 50%;
-background-color: #404bbf;
+background-color: #4d5ae5;
 line-height: 0;
 display: flex;
 align-items: center;
@@ -338,7 +346,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .team-icons-link:hover,
 .team-icons-link:focus {
-    background-color: #31d0aa;  
+    background-color: #404bbf;  
 }
 
 .team-container-icons {
@@ -346,13 +354,13 @@ display: flex;
 gap: 24px;
 align-items: center;
 justify-content: center;
+padding: 32px 0;
 }
 
 .team-icons{
-   
-    width: 24px;;
-    height: 24px;
-fill: #4d5ae5;
+    width: 16px;;
+    height: 16px;
+fill: #f4f4fd;
 }
 
 .portfolio {
