--- a/css/styles.css
+++ b/css/styles.css
@@ -296,8 +296,8 @@ gap: 24px;
     background: #fff;
    
 }   
-.team-walker {
-   
+.team-container-walker {
+    padding: 32px 0  
 }
 
 .team-image {
@@ -349,13 +349,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #404bbf;  
 }
 
-.team-container-icons {
-display: flex;
-gap: 24px;
-align-items: center;
-justify-content: center;
-padding: 32px 0;
-}
+
 
 .team-icons{
     width: 16px;;
