--- a/css/styles.css
+++ b/css/styles.css
@@ -352,8 +352,8 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 .team-icons{
-    width: 16px;;
-    height: 16px;
+width: 16px;
+height: 16px;
 fill: #f4f4fd;
 }
 
