--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ align-items: center;
 
 .page-header {
     border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1 , 0.08;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 1px rgba(46, 47, 66, 0.08);
 }
 
 .header-nav {
@@ -195,7 +195,7 @@ padding: 120px 0
 .conteiner-skills {
 display: flex;
 align-items: center;
-
+margin-bottom: 8px;
 height: 112px;
 }
 
