--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ align-items: center;
 
 .page-header {
     border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-nav {
@@ -291,19 +291,13 @@ gap: 24px;
     background: #fff;
     margin-bottom: 120px;
     text-align: center;
-    padding-bottom:  32px;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     background: #fff;
    }
    
-
-.team-image {
-    margin-bottom: 32px;
-}
-
 .team-container-walker {
-     
+    padding: 32px 0;   
 }
    
 .team-table-title {
@@ -352,17 +346,18 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #404bbf;  
 }
 
-
-
 .team-icons{
 width: 16px;
 height: 16px;
 fill: #f4f4fd;
 }
 
+
+
+
 .portfolio {
-padding-top: 120px; 
-padding-bottom: 120px;
+margin-top: 120px; 
+margin-bottom: 120px;
 }
 
 .container-portfolio {
@@ -397,32 +392,26 @@ flex-direction: column;
 flex-basis: 360px;
 width: calc((100% – 48px)/3);
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-
 }
 
 .portfolio-item:hover,
 .portfolio-item:focus {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     background: #fff;
- 
- }
+  }
 
 .image-info {
     position: relative;
     overflow: hidden;
 }
 
- 
-   
- .image-info-text {
+     .image-info-text {
     padding: 40px 32px;
     color: #f4f4fd;
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
-    
     background: #4d5ae5;
     transform: translateY(100%);
    overflow: auto;
@@ -431,8 +420,6 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em; 
 }
-
-
 
 .image-info:hover .image-info-text {
  transform: translateY(0);
