--- a/css/styles.css
+++ b/css/styles.css
@@ -220,8 +220,7 @@ gap: 24px;
 }
 
 .skills-item {
-letter-spacing: 0.02em;
-width: calc((100%-72) / 4);
+width: calc((100% - 72px) / 4);
 }
 
 .skilss-item-background {
@@ -237,7 +236,6 @@ display: flex;
 align-items: center;
 justify-content: center;
 margin-bottom: 8px;
-
 }
 
 .skills-title {
@@ -260,15 +258,11 @@ line-height: 1.5;
 .team {
 background: #f4f4fd;
 text-align: center;
+padding-top: 120px;
+padding-bottom: 120px;
 }
 
-.container-team {
-padding: 32px 0;
-} 
-
-
 .team-title {
-    padding-top: 120px;
     margin-bottom: 72px; 
     font-weight: 700;
     font-size: 36px;
@@ -283,18 +277,15 @@ padding: 32px 0;
 .team-list {
 display: flex;
 justify-content: space-between;
-align-items: center;
 gap: 24px;
 }
 
 .team-item {
     background: #fff;
-    margin-bottom: 120px;
     text-align: center;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-    background: #fff;
-   }
+  }
    
 .team-container-walker {
     padding: 32px 0;   
@@ -356,12 +347,8 @@ fill: #f4f4fd;
 
 
 .portfolio {
-margin-top: 120px; 
-margin-bottom: 120px;
-}
-
-.container-portfolio {
-
+padding-top: 120px; 
+padding-bottom: 120px;
 }
 
 .portfolio-title,
@@ -371,41 +358,40 @@ color: #2e2f42;
 }
 
 .portfolio-title {
-display: block;
-text-align: center;
-margin: 72px;
+    display: block;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    margin-bottom: 72px;
 }
-
-.portfolio-table-title {
-margin-bottom: 8px;
-}
-
+    
 .portfolio-list {
-display: flex;
-flex-wrap: wrap;
-gap: 48px 24px;
-}
-
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+    }
+  
 .portfolio-item {
-display: flex;
-flex-direction: column;
-flex-basis: 360px;
-width: calc((100% – 48px)/3);
-transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
+    display: flex;
+    flex-direction: column;
+    flex-basis: 360px;
+    width: calc((100% – 48px)/3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+        
 .portfolio-item:hover,
 .portfolio-item:focus {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     background: #fff;
   }
 
-.image-info {
+.portfolio-image-info {
     position: relative;
     overflow: hidden;
 }
-
-     .image-info-text {
+        
+.portfolio-info-text {
     padding: 40px 32px;
     color: #f4f4fd;
     position: absolute;
@@ -414,38 +400,31 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     top: 0;
     background: #4d5ae5;
     transform: translateY(100%);
-   overflow: auto;
-   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em; 
+    overflow: auto;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em; 
 }
-
-.image-info:hover .image-info-text {
- transform: translateY(0);
- }
-
+                
+.portfolio-item:hover .portfolio-info-text {
+    transform: translateY(0);
+    }
+   
+   
 .portfolio-walker {
-border-right: 1px solid #e7e9fc; 
-border-left: 1px solid #e7e9fc; 
-border-bottom: 1px solid #e7e9fc;
-padding: 32px 16px;
-}
-
-.portfolio-title {
-font-weight: 700;
-font-size: 36px;
-line-height: 1.11;
-text-align: center;
-text-transform: capitalize;
-margin-bottom: 72px;
-}
+    border-right: 1px solid #e7e9fc; 
+    border-left: 1px solid #e7e9fc; 
+    border-bottom: 1px solid #e7e9fc;
+    padding: 32px 16px;
+    }
 
 .portfolio-table-title {
-font-weight: 500;
+    margin-bottom: 8px;
+    font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
-}
+    }
 
 .portfolio-text {
 font-size: 16px;
