--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,6 @@ color: #4d5ae5;
 .header-logo {
 padding: 24px 0;
 margin-right: 76px;
-
 }
 
 .header-logo .logo-part {
@@ -85,10 +84,7 @@ position: relative;
 overflow: hidden;
 }
 
-
-
-
-  .nav-link::after {
+ .current::after {
     content: '';
     position: absolute;
     left: 0;
@@ -101,8 +97,8 @@ overflow: hidden;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-.nav-link:hover::after, 
-.nav-link:focus::after {
+.current:hover::after, 
+.current:focus::after {
     transform: translateY(0);  
 }
 
@@ -473,7 +469,7 @@ max-width: 264px;
 .footer-socialmedia {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    
     
 }
 
