--- a/css/styles.css
+++ b/css/styles.css
@@ -77,11 +77,15 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-color: #2e2f42;
+color: #404bbf;
 padding: 24px 0;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 position: relative;
 overflow: hidden;
+}
+
+.current {
+    color: #2e2f42;
 }
 
  .current::after {
