--- a/css/styles.css
+++ b/css/styles.css
@@ -77,34 +77,51 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-color: #404bbf;
+color: #2e2f42;
 padding: 24px 0;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+/* 
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 position: relative;
-overflow: hidden;
+overflow: hidden; */
+
+
+.nav-link.current {
+    position: relative;
+
 }
 
-.current {
-    color: #2e2f42;
-}
-
- .current::after {
+.nav-link.current::after {
     content: '';
-    position: absolute;
-    left: 0;
-    bottom: -1px;
     width: 100%;
     height: 4px;
     border-radius: 2px;
+    left: 0;
+    bottom: -1px;   
+    position: absolute;
     background-color: #404bbf;
+
+}
+
+/*
+ .current::after {
+    
+ 
+ 
+  
+    
+    
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+
 
 .current:hover::after, 
 .current:focus::after {
     transform: translateY(0);  
+    
 }
+*/
 
 .contacts {
 margin-left: auto;
@@ -129,7 +146,8 @@ transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .contacts-link:hover,
 .contacts-link:focus,
 .nav-link:hover,
-.nav-link:focus {
+.nav-link:focus,
+.nav-link.current {
 color: #404bbf;
 }
 
